# skill-issue-cli

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: release.yml
patterns/: execution.toml  filesystem.toml  hidden.toml  injection.toml  metadata.toml  network.toml  secrets.toml  social.toml
src/: config.rs  engine.rs  finding.rs  main.rs  scanner.rs
src/output/: json.rs  mod.rs  sarif.rs  table.rs
src/remote/: github.rs  mod.rs  parse.rs
src/rules/: composite_rule.rs  metadata_rule.rs  mod.rs  regex_rule.rs  unicode_rule.rs
tests/: cli_tests.rs  pattern_tests.rs
tests/fixtures/clean_skill/: README.md
tests/fixtures/dangerous_skill/: README.md
