[package]
name = "skill-issue"
version = "0.1.0"
edition = "2021"
description = "Static security analyzer for Claude skill directories"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
comfy-table = "7"
colored = "2"
unicode-normalization = "0.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
